content/nomad/v2.0.x/content/tools/nomad-pack/advanced-usage.mdx
---
layout: docs
page_title: Nomad Pack advanced usage
description: |-
  Generate variable files, render a pack, plan a pack deployment, and
  manage your local pack registry.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-11-17T20:24:06-05:00
last_modified: 2025-11-17T20:24:06-05:00
# END AUTO GENERATED METADATA
---

# Nomad Pack advanced usage

In the [Nomad Pack overview guide][pack-intro], you learned about Nomad Pack, how to deploy applications with it, and how to discover community packs.

In this guide, you will learn about more advanced usage including:

- Generating a variable file
- Rendering a pack
- Advanced `run` options
- Planning with `plan`
- Registry management

## Generate a variable file

You can pass in variables to a pack with a variables file. You can pass
`-f/--var-file` multiple times. Variable files are processed in the same order
they are provided on the command line. If the same key is defined in multiple
variable files, the value from the last file wins.

```shell-session
$ nomad-pack run hello_world -f ./my-variables.hcl
```

The `generate var-file` command generates variable files from a pack.

```shell-session
$ nomad-pack generate var-file hello_world -o ./my-variables.hcl
```

You can also use the path to a pack instead of a pack name.

```shell-session
$ nomad-pack generate var-file ./my-local-pack -o ./my-variables.hcl
```

## Render a pack

Use Nomad Pack to render jobspecs without immediately deploying them to Nomad.

This is useful when writing a pack, debugging deployments, integrating Nomad Pack into a CI/CD environment, or using another deployment mechanism.

The `render` command takes the same `--var` and `--var-file` flags that `run` takes.

The `--to-dir` flag determines the directory where the rendered templates will be written.

You can pass the `--render-output-template` flag to additionally render the output template. Some output templates rely on a deployment for information. In these cases, the output template may not render with all the necessary information.

```shell-session
$ nomad-pack render hello_world --to-dir ./tmp --var greeting=hola --render-output-template
```

## Advanced `run` options

To deploy the resources in a pack to Nomad, use the `run` command.

```shell-session
$ nomad-pack run hello_world
```

By default, `run` monitors evaluations and deployments after job submission. If
you are running in automation and want the command to return immediately, use
the `--detach` flag.

```shell-session
$ nomad-pack run hello_world --detach
```

If a target job already exists and was not deployed by Nomad Pack, you can use
`--deploy-override`.

```shell-session
$ nomad-pack run hello_world --deploy-override
```

When you update a running deployment, Nomad Pack stops jobs that no longer
exist in the updated pack definition.

By passing a `--name` value into `run`, Nomad Pack deploys each resource in the
pack with a metadata value for pack name. If no name is given, the pack name
is used by default.

This allows Nomad Pack to manage multiple deployments of the same pack.

```shell-session
$ nomad-pack run hello_world --name hola-mundo
```

To run a local pack from its directory, pass the directory path instead of the pack name.
This is useful when developing a pack.

```shell-session
$ nomad-pack run .
```

## Plan

If you want to see details on how Nomad Pack deploys a pack but are not ready to immediately deploy the pack, run the `plan` command.

This invokes Nomad in a dry-run mode using the [Nomad Plan](/nomad/api-docs/jobs#create-job-plan) API endpoint.

```shell-session
$ nomad-pack plan hello_world
```

Similar to `run`, `plan` takes the `--name` flag to look for pack deployments with that name. Nomad Pack uses the pack name by default.

```shell-session
$ nomad-pack plan hello_world --name hola-mundo
```

The `plan` command also takes the `--var` and `-f` flags like the `run` command.

```shell-session
$ nomad-pack plan hello_world -f ./my-variables.hcl --var greeting=hallo
```

The `plan` command also supports `--deploy-override` when you want to plan over
an existing non-pack job.

```shell-session
$ nomad-pack plan hello_world --deploy-override
```

### Plan exit codes

The `plan` command returns different exit codes depending on the result of the plan operation:

- `0` - Plan completed with no changes
- `1` - Plan completed and changes will be made
- `255` - An error occurred during the plan operation

You can override these exit codes using CLI flags or environment variables. CLI flags take precedence over environment variables.

#### Using CLI flags

```shell-session
$ nomad-pack plan hello_world --exit-code-no-changes=0 --exit-code-makes-changes=0 --exit-code-error=1
```

#### Using environment variables

You can set the following environment variables to override the default exit codes:

- `NOMAD_PACK_PLAN_EXIT_CODE_NO_CHANGES` - Exit code when plan shows no changes (default: 0)
- `NOMAD_PACK_PLAN_EXIT_CODE_MAKES_CHANGES` - Exit code when plan shows changes (default: 1)
- `NOMAD_PACK_PLAN_EXIT_CODE_ERROR` - Exit code when there is an error (default: 255)

Example:

```shell-session
$ export NOMAD_PACK_PLAN_EXIT_CODE_NO_CHANGES=0
$ export NOMAD_PACK_PLAN_EXIT_CODE_MAKES_CHANGES=0
$ export NOMAD_PACK_PLAN_EXIT_CODE_ERROR=1
$ nomad-pack plan hello_world
```

This is useful in CI/CD pipelines where you want to avoid treating a successful plan with changes as a failure. By setting `NOMAD_PACK_PLAN_EXIT_CODE_MAKES_CHANGES=0`, the command exits with code `0` even when changes are made, allowing your pipeline to continue.


### Reading HCL diagnostics

When Nomad Pack reports HCL parsing errors, the message includes filename,
line, and column ranges. For example, `variables.hcl:3,3-7` identifies the
exact location to inspect.

## Registry management

The [Introduction to Nomad Pack guide][pack-intro] explains the basics of adding to and listing packs in the registry. The following section provides additional details on registry management.

### Initialization and directory structure

The first time you run `list`, Nomad Pack adds a `nomad/packs`
directory to your desktop user's cache directory—`$XDG_CACHE_DIR` on Linux,
`~/Library/Caches` on macOS, `%AppData%` on Windows, and so on. This folder stores
information about cloned registries and their available packs.

During initialization, Nomad Pack downloads a default registry of packs from the
[Nomad Pack community registry][community-registry].

The directory structure is as follows:

```text
parent-directories (see above)
└── nomad
    └── packs
        ├── <REGISTRY>
            ├── <REGISTRY-TAG>
                ├── <PACK-NAME@REF>
                    ├── ...files containing pack contents...
```

Nomad Pack requires the contents of the pack cache directory to work properly, but you should not manually manage or change these files. Instead, you can use the `registry` commands.

### Add new registries

The `registry` command includes several sub-commands for interacting with registries.

Add custom registries with the `registry add` command. Any `git` based
registry supported by [`go-getter`](https://github.com/hashicorp/go-getter) should
work.

For example, to add the entire [Nomad Pack Community Registry](https://github.com/hashicorp/nomad-pack-community-registry), use the `registry add` command to download the registry.

```shell-session
$ nomad-pack registry add community github.com/hashicorp/nomad-pack-community-registry
```

### Add an individual pack from a registry

To add a single pack from the registry, use the `--target` flag.

```shell-session
$ nomad-pack registry add community github.com/hashicorp/nomad-pack-community-registry --target=nginx
```

### Add a registry at a specific commit

To download a single pack or an entire registry at a specific version/SHA, use the `--ref` flag.

Refs can include slashes, such as `pack-name/v0.4.2`.

```shell-session
$ nomad-pack registry add community github.com/hashicorp/nomad-pack-community-registry --ref=v0.0.1
```

### Remove a registry

To remove a registry or pack from your local cache, use the `registry delete` command.
This command also supports the `--target` and `--ref` flags.

```shell-session
$ nomad-pack registry delete community
```

### Update a registry

To update a registry, use the `registry update` command.

```shell-session
$ nomad-pack registry update default
```

## Next steps

In this guide you learned how to interact with Nomad Pack in an advanced way.
You learned how to generate a variable file, render a pack, use additional `run`
options, use the `plan` command, and interact with Nomad Pack registries.

Use official and community packs to deploy applications quickly using best
practices and knowledge from the Nomad community.

To learn how to write your own Nomad Packs or convert your existing Nomad job
specifications into reusable packs, continue on to the [Create custom packs
guide][writing-packs].

[nomad-site]: /nomad/
[pack-repo]: https://github.com/hashicorp/nomad-pack
[pack-intro]: /nomad/tools/nomad-pack/
[writing-packs]: /nomad/tools/nomad-pack/create-packs
[community-registry]: https://github.com/hashicorp/nomad-pack-community-registry
